# rust-auth-service

./: .env  Cargo.toml
axum-app/: .env.example  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
axum-app/migrations/: 00000000000001_create_users.up.sql
axum-app/src/: config.rs  db.rs  main.rs  rabbit.rs  routes.rs
rust-auth-service/: .env.example  .gitignore  Cargo.toml
rust-auth-service/migrations/: 00000000000001_create_users.up.sql  00000000000002_create_sessions.up.sql  00000000000003_create_password_reset_tokens.up.sql
rust-auth-service/src/: main.rs
rust-auth-service/src/config/: mod.rs
rust-auth-service/src/db/: mod.rs
src/: main.rs
src/config/: mod.rs
src/db/: mod.rs
