[package]
name = "axum-app"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1.34", features = ["full"] }
tower = "0.4"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio", "macros", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
envconfig = "0.2"
tower-http = "0.7.0"
