[package]
name = "rust-auth-service"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio", "macros", "uuid", "chrono"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
dotenv = "0.15"
uuid = { version = "1.0", features = ["v4"] }  # explicitly add uuid for macros
chrono = { version = "0.4", features = ["serde"] }
